New icon, comments for method class

--- a/app/src/main/res/layout/activity_create_note.xml
+++ b/app/src/main/res/layout/activity_create_note.xml
@@ -55,7 +55,7 @@
                     android:importantForAutofill="no"
                     android:includeFontPadding="false"
                     android:inputType="text"
-                    android:textStyle="bold"
+                    android:fontFamily="@font/ptsantnarrow_bold"
                     android:textColor="?attr/Titel_1"
                     android:textColorHint="?attr/Titel_2"
                     android:textSize="@dimen/_16ssp"
@@ -67,6 +67,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:includeFontPadding="false"
+                    android:fontFamily="@font/ptsansnarraw_regular"
                     android:textColor="?attr/Titel_2"
                     android:textSize="@dimen/_10ssp"
                     app:layout_constraintEnd_toEndOf="@id/create_inputNoteTitle"
@@ -82,6 +83,7 @@
                     android:layout_marginEnd="@dimen/_12sdp"
                     android:background="@null"
                     android:hint="@string/note_subtitle"
+                    android:fontFamily="@font/ptsansnarraw_regular"
                     android:importantForAutofill="no"
                     android:includeFontPadding="false"
                     android:inputType="textMultiLine"
@@ -123,6 +125,7 @@
                         android:id="@+id/create_textWebURL"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
+                        android:fontFamily="@font/ptsansnarraw_regular"
                         android:layout_weight="1"
                         android:autoLink="web"
                         android:includeFontPadding="false"
@@ -186,6 +189,7 @@
                     app:bulletGapWidth="@dimen/bullet_gap_width"
                     app:historyEnable="true"
                     app:historySize="99"
+                    android:fontFamily="@font/ptsansnarraw_regular"
                     android:hint="@string/type_note_here"
                     app:linkColor="@color/blue_500"
                     app:linkUnderline="true"
