--- a/app/src/main/res/layout/layout_add_url.xml
+++ b/app/src/main/res/layout/layout_add_url.xml
@@ -26,7 +26,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/_8sdp"
         android:layout_marginEnd="@dimen/_8sdp"
-        android:textStyle="bold"
+        android:fontFamily="@font/ptsantnarrow_bold"
         android:includeFontPadding="false"
         android:text="@string/add_url"
         android:textColor="?attr/BackgroundColor"
@@ -44,6 +44,7 @@
         android:layout_marginEnd="@dimen/_8sdp"
         android:layout_marginTop="@dimen/_8sdp"
         android:background="@null"
+        android:fontFamily="@font/ptsansnarraw_regular"
         android:gravity="center_vertical"
         android:hint="@string/enter_url"
         android:textColor="?attr/BackgroundColor"
