--- a/app/src/main/res/layout/layout_export_file.xml
+++ b/app/src/main/res/layout/layout_export_file.xml
@@ -22,7 +22,7 @@
             android:layout_marginStart="@dimen/_10sdp"
             android:includeFontPadding="false"
             android:text="@string/export"
-            android:textStyle="bold"
+            android:fontFamily="@font/ptsantnarrow_bold"
             android:textColor="?attr/BackgroundTint"
             android:textSize="@dimen/_16ssp"/>
 
@@ -56,6 +56,7 @@
             android:layout_marginStart="@dimen/_10sdp"
             android:includeFontPadding="false"
             android:text="@string/export_image_file"
+            android:fontFamily="@font/ptsansnarraw_regular"
             android:textColor="?attr/BackgroundTint"
             android:textSize="@dimen/_12ssp"/>
 
@@ -87,6 +88,7 @@
             android:layout_marginStart="@dimen/_10sdp"
             android:includeFontPadding="false"
             android:text="@string/export_txt_file"
+            android:fontFamily="@font/ptsansnarraw_regular"
             android:textColor="?attr/BackgroundTint"
             android:textSize="@dimen/_12ssp"/>
 
@@ -109,6 +111,7 @@
             android:includeFontPadding="false"
             android:padding="@dimen/_8sdp"
             android:text="@string/cancel"
+            android:fontFamily="@font/ptsantnarrow_bold"
             android:textColor="@color/teal_200"
             android:textSize="@dimen/_13ssp" />
     </RelativeLayout>
