--- a/app/src/main/res/layout/layout_mis.xml
+++ b/app/src/main/res/layout/layout_mis.xml
@@ -15,6 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/_35sdp"
         android:gravity="center"
+        android:fontFamily="@font/ptsansnarraw_regular"
         android:includeFontPadding="false"
         android:text="@string/click_here"
         android:textColor="?attr/Titel_1"
@@ -202,6 +203,7 @@
             android:layout_marginStart="@dimen/_10sdp"
             android:includeFontPadding="false"
             android:text="@string/add_image"
+            android:fontFamily="@font/ptsansnarraw_regular"
             android:textColor="?attr/BackgroundTint"
             android:textSize="@dimen/_12ssp"/>
 
@@ -231,6 +233,7 @@
             android:layout_marginStart="@dimen/_10sdp"
             android:includeFontPadding="false"
             android:text="@string/add_url"
+            android:fontFamily="@font/ptsansnarraw_regular"
             android:textColor="?attr/BackgroundTint"
             android:textSize="@dimen/_12ssp"/>
 
@@ -260,6 +263,7 @@
             android:layout_marginStart="@dimen/_10sdp"
             android:includeFontPadding="false"
             android:text="@string/export"
+            android:fontFamily="@font/ptsansnarraw_regular"
             android:textColor="?attr/BackgroundTint"
             android:textSize="@dimen/_12ssp"/>
 
@@ -289,6 +293,7 @@
             android:layout_marginStart="@dimen/_10sdp"
             android:includeFontPadding="false"
             android:text="@string/share"
+            android:fontFamily="@font/ptsansnarraw_regular"
             android:textColor="?attr/BackgroundTint"
             android:textSize="@dimen/_12ssp"/>
 
@@ -319,6 +324,7 @@
             android:layout_marginStart="@dimen/_10sdp"
             android:includeFontPadding="false"
             android:text="@string/delete_note"
+            android:fontFamily="@font/ptsansnarraw_regular"
             android:textColor="@color/colorDelete"
             android:textSize="@dimen/_12ssp"/>
 
@@ -330,6 +336,7 @@
         android:gravity="center"
         android:includeFontPadding="false"
         android:text="@string/app_name"
+        android:fontFamily="@font/ptsansnarraw_regular"
         android:textColor="?attr/Titel_1"
         android:textSize="@dimen/_13ssp"/>
 
