--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -31,11 +31,11 @@
             android:layout_alignTop="@+id/image"
             android:layout_marginStart="10dp"
             android:layout_marginTop="20dp"
-            android:textSize="19sp"
+            android:textSize="25sp"
             android:layout_toEndOf="@+id/image"
             android:text="@string/app_name"
             android:textColor="?BackgroundTint"
-            android:textStyle="bold" />
+            android:fontFamily="@font/ptsantnarrow_bold" />
 
         <View
             android:layout_gravity="center"
